<resources>
    <string name="app_name">GangMonSO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="culture_art">문화예술</string>
    <string name="art_center">강동아트센터</string>
    <string name="residents_hall">강동구민회관</string>

    <string name="art_center_sub">살기 좋은 문화도시 강동을 만들기 위한 목적</string>
    <string name="text">상세설명</string>
    <string name="art_center_contents">강동아트센터는 구민의 문화향수를 확대하며 살기 좋은문화도시 강동을 만들기 위한 목적으로 만들어진 지역자치단체 종합공연장입니다.</string>
    <string name="art_center_address">서울특별시 강동구 동남로 870-0 서울 강동구 상일동 477</string>

    <string name="residents_hall_sub">다양한 강좌 운영, 문화·예술 공연 개최</string>
    <string name="residents_hall_contents">연극, 콘서트 등 다양한 공연행사가 가능한 600석 규모의 대강당, 구민들의 문화욕구를 해소할 수 있는 문화쉼터가 바로 강동구민회관입니다.</string>
    <string name="residents_hall_address">서울특별시 강동구 천호동 상암로 168</string>

    <string name="traditional_culture">전통문화</string>
    <string name="traditional_place">서울 암사동 유적지</string>

    <string name="traditional_sub">서울 암사동 유적은 지금으로부터 약 6,000여년전에 우리의 조상인 신석기시대 사람들이 살았던 집터 유적으로 지금까지 우리나라에서 밝혀진 신석기시대의 최대 집단취락지입니다.</string>
    <string name="traditional_contents">이 유적은 동남쪽의 구릉에 신석기시대 다음 시대인 청동기시대의 무문토기유적(無文土器遺蹟)과 인접되어 있어 두 시대의 문화가 접촉하는 양상을 알려주며, 또 농경문화 개시를 입증하여 주는 고고학적 자료도 발견되어 한국 선사문화의 추이를 밝히는데 있어 유일하고도 귀중한 유적입니다.</string>
    <string name="traditional_address">서울특별시 강동구  암사2동 155번지</string>
    <string name="traditional_time">09:30~18:00</string>
    <string name="traditional_adult">어른(만19세~64세) : 400(30인 이상), 500원
                                     어린이(만7세~18세):200원(30인 이상), ~300원</string>
    <string name="traditional_holiday">1월 1일, 매주 월요일 (단, 월요일이 공휴일일 때에는 공휴일 다음의 첫 번째 평일 )</string>
    <string name="book_facilities">도서시설</string>

    <string name="library1">고덕평생학습관</string>
    <string name="library1_address">서울 강동구 고덕로 295 고덕평생학습관</string>
    <string name="library1_num">02-6902-2600</string>
    <string name="library1_time">월요일 휴무 둘째, 넷째주\n\n
평일 07:00 - 22:00 열람실(11월~2월)\n\n
평일 07:00 - 23:00 열람실(3월~10월)\n\n
평일 09:00 - 22:00 문헌정보실(평일)\n\n
평일 09:00 - 18:00 어린이실(평일)\n\n
평일 08:00 - 22:00 열람실(주말)\n\n
평일 09:00 - 17:00 문헌정보실, 어린이실(주말)\n</string>
    <string name="library1_route">5호선 고덕역 3번출구에서 400m 출구에서 좌측으로 나와 직진</string>

    <string name="library2">강동구립해공도서관</string>
    <string name="library2_address">서울 강동구 올림픽로 702 해공공원(천호공원)</string>
    <string name="library2_num">02-478-9656</string>
    <string name="library2_time">화요일 휴무\n\n
평일 07:00 - 22:00 하절기(3월~10월),일반열람실\n\n
평일 08:00 - 22:00 동절기(11월~2월),일반열람실\n\n
평일 09:00 - 18:00 어린이자료실,디지털자료실\n\n
평일 09:00 - 22:00 종합자료실\n\n
주말 07:00 - 22:00 하절기(3월~10월),일반열람실\n\n
주말 08:00 - 22:00 동절기(11월~2월),일반열람실\n\n
주말 09:00 - 17:00 어린이자료실,디지털자료실,종합자료실\n</string>
    <string name="library2_route">5호선, 8호선 천호역3번 출구에서561m</string>

    <string name="library3">강동도서관</string>
    <string name="library3_address">서울 강동구 양재대로116길 57 강동도서관</string>
    <string name="library3_num">02-483-0728</string>
    <string name="library3_time">매일 07:00 - 23:00</string>
    <string name="library3_route">5호선 길동역2번 출구에서366m</string>

    <string name="library4">한국점자도서관</string>
    <string name="library4_address">서울 강동구 상암로4가길 32 암사2동새마을문고</string>
    <string name="library4_num">02-3426-7411</string>
    <string name="library4_time">평일 09:00 - 18:00
 주말 휴무\n</string>
    <string name="library4_route">8호선 암사역3번 출구에서314m</string>

    <string name="library5">강동구립성내도서관</string>
    <string name="library5_address">서울 강동구 성안로 106-1 성내구립도서관</string>
    <string name="library5_num">02-471-0044</string>
    <string name="library5_time">어린이자료실 09:00 ~ 18:00\n\n
종합자료실 09:00 ~ 20:00\n\n
디지털자료실 09:00 ~ 18:00\n\n
주말 모든 자료실 09:00 ~ 17:00\n</string>
    <string name="library5_route">5호선 강동역3번 출구에서409m</string>

    <string name="library6">작은도서관 웃는책</string>
    <string name="library6_address">서울 강동구 구천면로42길 60 1층</string>
    <string name="library6_num">02-478-8600</string>
    <string name="library6_time">평일 09:30 - 18:30\n\n
토요일 10:00 - 17:00\n\n
일요일 휴무</string>
    <string name="library6_route">5호선 굽은다리역2번 출구에서693m</string>

    <string name="library7">강동구립천호도서관</string>
    <string name="library7_address">서울 강동구 성안로31마길 1 2층 천호도서관</string>
    <string name="library7_num">02-488-7223</string>
    <string name="library7_time">월요일 휴무 매주 월요일 휴관\n\n
평일 09:00 - 18:00\n\n
주말 09:00 - 17:00\n</string>
    <string name="library7_route">5호선 강동역1번 출구에서657m</string>

    <string name="library8">파랑새 작은 도서관</string>
    <string name="library8_address">서울 강동구 천호대로186길 7 둔촌2동주민센터 1층</string>
    <string name="library8_num">02-489-2666</string>
    <string name="library8_time">평일 13:00 - 17:00\n\n
주말 휴무\n</string>
    <string name="library8_route">5호선 길동역2번 출구에서725m</string>

    <string name="library9">도담도담북카페</string>
    <string name="library9_address">서울 강동구 양재대로138길 37 명일1동 주민센터 1층</string>
    <string name="library9_num">02-427-2152</string>
    <string name="library9_time">평일 10:00 - 17:00\n\n
주말 휴무\n</string>
    <string name="library9_route">5호선 명일역4번 출구에서 282m</string>

    <string name="library10">글익는 작은도서관</string>
    <string name="library10_address">서울특별시 강동구 고덕로 137, (암사동) 암사3동주민센터 3층</string>
    <string name="library10_num">02-428-1643</string>
    <string name="library10_time">평일 13:00 - 17:00\n\n
주말 휴무\n</string>
    <string name="library10_route">5호선 명일역 2번 출구에서 632m</string>

    <string name="library11">안말 작은도서관</string>
    <string name="library11_address">서울 강동구 풍성로37가길 62 성내2동 주민센터 2층</string>
    <string name="library11_num">02-488-2392</string>
    <string name="library11_time">평일 13:00 - 17:00\n\n
주말 휴무\n</string>
    <string name="library11_route">5호선 강동역 3번 출구에서 541m</string>

    <string name="library12">다온작은도서관</string>
    <string name="library12_address">서울 강동구 천중로51길 52 2층</string>
    <string name="library12_num">02-474-7009</string>
    <string name="library12_time">평일 10:00 - 19:00 (월요일 휴무)\n\n
토요일 10:00 - 19:00\n\n
일요일 14:00 - 19:00 공휴일 포함\n</string>
    <string name="library12_route">5호선 굽은다리역 4번 출구에서 450m</string>

    <string name="library13">햇살 작은도서관</string>
    <string name="library13_address">서울 강동구 천중로 17길 42-16 천호2동 자치회관 2층</string>
    <string name="library13_num">02-471-4192</string>
    <string name="library13_time">평일 10:00 - 17:00 \n\n
        주말 휴무</string>
    <string name="library13_route">8호선 암사역 2번 출구에서 674m</string>

    <string name="library14">함께크는우리</string>
    <string name="library14_address">서울 강동구 고덕로 61길 104 2층</string>
    <string name="library14_num">02-428-4686</string>
    <string name="library14_time">평일 10:00 - 18:00</string>
    <string name="library14_route">5호선 고덕역 1번 출구에서 533m</string>

    <string name="library15">옹기종기작은도서관</string>
    <string name="library15_address">서울 강동구 양재대로 1512 이화빌딩2층</string>
    <string name="library15_num">070-8118-3474</string>
    <string name="library15_time">평일 13:00 - 18:00\n\n
주말 휴무</string>
    <string name="library15_route">5호선 길동역 2번출구에서 294m</string>

    <string name="gangdong">강동어린이 대축제</string>
    <string name="gangdong_sub">강동의 영유아 가족이 함께 참여하는 행사</string>
    <string name="introduce">상세설명</string>
    <string name="gangdong_text">영유아와 가족들을 위한 축제로서 다양한 놀이체험 및 문화공연의
        장을 제공하고,아동의 볼권리 증진을 위해 가족이 함께 참여할 수 있는 실내외 놀이활동을 통하여 건강한 성장과 발달을 도모하고자 합니다.</string>
    <string name="gangdong_calendar">매년 5월초</string>
    <string name="gangdong_location">구청 앞 디자인거리, 강동어린이회관\n</string>

    <string name="starOfstar">별(★)의별 축제</string>
    <string name="starOfstar_sub">낮에는 허브, 밤에는 별. 두 가지 테마를 동시에 즐길 수 있다</string>
    <string name="starOfstar_text">2007년부터 시작된 ‘별(★)의별 축제’는 가을의 전령 세이지꽃 물결과 허브향으로 가득한
        강동허브천문공원에서 개최되며, 허브와 별을 주제로 이색적인 체험과 함께 온 가족이 함께 즐기는 향긋한 가을밤의 별빛축제입니다.</string>
    <string name="starOfstar_calendar">매년9월말</string>
    <string name="starOfstar_location">강동허브천문공원</string>

    <string name="multicultural">다문화가족축제</string>
    <string name="multicultural_sub">다문화 프로그램 및 테마별 체험부스 운영</string>
    <string name="multicultural_text">2013년부터 시작된 “다 하나의 가족 축제”는 다양한
        나라의 놀이 및 문화체험을 통해 문화의 다양성을 인정하고 다문화가족과 비 다문화가족 모두가 다 하나의 가족으로 함께 소통하는 자리입니다.</string>
    <string name="multicultural_calendar">매년 4~5월중</string>
    <string name="multicultural_location">동명근린공원 인조잔디 축구장</string>
</resources>
