<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="@color/cutout"
    tools:ignore=".Festival_two"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        android:background="#ffffff"
        android:textColor="#000000"
        app:menu="@menu/menu"
        android:layout_gravity="start"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:isScrollContainer="false"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/menu"/>

    </ScrollView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:background="@drawable/multicultural_festival"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multicultural"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginTop="360dp"
            android:layout_marginLeft="35dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multicultural_sub"
            android:textSize="17dp"
            android:textColor="#000000"
            android:layout_marginTop="400dp"
            android:layout_marginLeft="30dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="430dp"
            android:background="#808080" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduce"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginTop="450dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multicultural_text"
            android:textSize="17dp"
            android:textColor="#000000"
            android:layout_marginTop="490dp"
            android:layout_marginLeft="30dp"
            android:ems="18"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="600dp"
            android:background="#808080" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/time"
            android:layout_marginTop="615dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multicultural_calendar"
            android:textSize="17dp"
            android:textColor="#000000"
            android:layout_marginTop="615dp"
            android:layout_marginLeft="50dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="650dp"
            android:background="#808080" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:background="@drawable/location"
            android:layout_marginTop="660dp"
            android:layout_marginLeft="9dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multicultural_location"
            android:textSize="17dp"
            android:textColor="#000000"
            android:layout_marginTop="665dp"
            android:layout_marginLeft="50dp"/>

    </FrameLayout>
</androidx.drawerlayout.widget.DrawerLayout>