<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="@color/cutout"
    tools:ignore="Menu_Artinformation"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        android:background="#ffffff"
        android:textColor="#000000"
        app:menu="@menu/menu"
        android:layout_gravity="start"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:isScrollContainer="false"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/menu"/>

    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:id="@+id/gangdong_ImageBtn"
            android:layout_marginTop="60dp"
            android:background="@drawable/gangdong_festival" />

        <Button
            android:layout_width="290dp"
            android:layout_height="130dp"
            android:id="@+id/gangdongBtn"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="120dp"
            android:textColor="#000000"
            android:background="#00ff0000"
            android:text="@string/gangdong"
            android:textSize="25dp"
            android:gravity="top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="120dp"
            android:text="@string/gangdong_sub"
            android:textColor="#000000"
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="190dp"
            android:background="#808080"/>

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:id="@+id/starofstar_ImageBtn"
            android:layout_marginTop="205dp"
            android:background="@drawable/starofstar_festival" />

        <Button
            android:layout_width="290dp"
            android:layout_height="130dp"
            android:id="@+id/starofstarBtn"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="120dp"
            android:textColor="#000000"
            android:background="#00ff0000"
            android:text="@string/starOfstar"
            android:textSize="25dp"
            android:gravity="top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginLeft="120dp"
            android:text="@string/starOfstar_sub"
            android:textColor="#000000"
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="335dp"
            android:background="#808080"/>

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:id="@+id/multicultural_ImageBtn"
            android:layout_marginTop="350dp"
            android:background="@drawable/multicultural_festival" />

        <Button
            android:layout_width="290dp"
            android:layout_height="130dp"
            android:id="@+id/multiculturalBtn"
            android:layout_marginTop="350dp"
            android:layout_marginLeft="120dp"
            android:textColor="#000000"
            android:background="#00ff0000"
            android:text="@string/multicultural"
            android:textSize="25dp"
            android:gravity="top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_marginLeft="120dp"
            android:text="@string/multicultural_sub"
            android:textColor="#000000"
            android:textSize="15dp" />

    </FrameLayout>

</androidx.drawerlayout.widget.DrawerLayout>