<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="@color/cutout"
    tools:ignore=".Art"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        android:background="#ffffff"
        android:textColor="#000000"
        app:menu="@menu/menu"
        android:layout_gravity="start"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:isScrollContainer="false"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/menu"/>

    </ScrollView>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/art_center_image"
            android:layout_width="330dp"
            android:layout_height="300dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/artcenter" />

        <ImageView
            android:id="@+id/pin"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="617dp"
            android:background="@drawable/location" />

        <TextView
            android:id="@+id/art_center_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="405dp"
            android:text="@string/art_center"
            android:textColor="#000000"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/art_center_subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="445dp"
            android:text="@string/art_center_sub"
            android:textColor="#000000"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="495dp"
            android:text="@string/text"
            android:textColor="#000000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/art_center_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="530dp"
            android:ems="19"
            android:text="@string/art_center_contents"
            android:textColor="#000000"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/art_center_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="620dp"
            android:text="@string/art_center_address"
            android:textColor="#000000"
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="483dp"
            android:background="#808080" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="605dp"
            android:background="#808080" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="650dp"
            android:background="#808080" />


    </FrameLayout>

</androidx.drawerlayout.widget.DrawerLayout>